# ai-rules

./: .ai-agent-rules-config.yaml.example  .ai-rules-config.yaml.example  .gitignore  AGENTS.md  CHANGELOG.md  Justfile  LICENSE  README.md  pyproject.toml
.benchmarks/Darwin-CPython-3.13-64bit/: 0001_9b9a61730912c7378178d6db7c5b338a4481f149_20251202_201945_uncommited-changes.json  0002_5b77284e49c252807be766618b4ef908d2fb225c_20251202_202433_uncommited-changes.json  0003_5b77284e49c252807be766618b4ef908d2fb225c_20251202_202910_uncommited-changes.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  publish.yml  release-skills.yml  release.yml
.hooks/: post-merge  pre-commit
config/: AGENTS.md
config/claude/: settings.json
config/claude/agents/: code-reviewer.md  docs-compliance-reviewer.md
config/claude/commands/: comment-cleanup.md  continue-crash.md  dev-docs.md  pr-creator.md  test-cleanup.md  update-docs.md
config/claude/hooks/: subagentStop.py
config/claude/skills/prompt-engineer/resources/: templates.md
config/projects/: README.md
config/projects/example-project/: AGENTS.md
docs/: CLI_REFERENCE.md
script/: benchmark.sh  claude_console.sh  code_quality.sh
scripts/: generate_cli_docs.py
src/ai_rules/: __init__.py  claude_extensions.py  cli.py  completions.py  config.py  display.py  lsp.py  mcp.py  plugins.py  profiles.py  skills.py  state.py  symlinks.py  utils.py
src/ai_rules/agents/: __init__.py  amp.py  base.py  claude.py  codex.py  cursor.py  gemini.py  goose.py  shared.py
src/ai_rules/bootstrap/: __init__.py  config.py  detection.py  installer.py  updater.py  version.py
src/ai_rules/cli/: __init__.py  __main__.py  context.py  display.py  helpers.py  runner.py
src/ai_rules/cli/commands/: __init__.py  diff.py  install.py  list_agents.py  setup.py  status.py  uninstall.py  upgrade.py  validate.py
src/ai_rules/cli/components/: __init__.py  cleanup.py  completions.py  config.py  confirmation.py  extensions.py  legacy.py  mcp.py  optional_tools.py  plugins.py  settings.py  settings_cache.py  skills.py  source_files.py  symlinks.py
src/ai_rules/cli/groups/: completions.py  config.py  exclude.py  lsp.py  override.py  profile.py  skill.py  tool.py
src/ai_rules/config/: AGENTS.md  chat_agent_hints.md
src/ai_rules/config/amp/: settings.json
src/ai_rules/config/claude/: settings.json
src/ai_rules/config/claude/agents/: code-reviewer.md  crossfire.md
src/ai_rules/config/claude/commands/: agents-md.md  annotate-changelog.md  comment-cleanup.md  dev-docs.md  pr-creator.md  prompt-critique.md  (+3 more)
src/ai_rules/config/codex/: config.toml
src/ai_rules/config/gemini/: settings.json
src/ai_rules/config/goose/: config.yaml
src/ai_rules/config/profiles/: default.yaml  personal.yaml  work.yaml
src/ai_rules/targets/: base.py  registry.py
src/ai_rules/tools/: base.py  statusline.py
tests/: conftest.py
tests/fixtures/: sample_agent.md  sample_agents.md  sample_command.md  sample_config.yaml  sample_exclude_config.yaml  sample_settings.json
tests/integration/: test_config_commands.py  test_exclude_commands.py  test_install_flow.py  test_override_commands.py  test_profile_commands.py  test_projects.py  test_schema_validation.py  test_status_command.py  test_uninstall_safety.py
tests/performance/: __init__.py  test_install_performance.py
tests/unit/: test_agents.py  test_bootstrap_config.py  test_bootstrap_detection.py  test_bootstrap_installer.py  test_bootstrap_updater.py  test_bootstrap_version.py  test_cli_components.py  test_cli_entrypoint.py  test_cli_legacy_component.py  test_cli_lifecycle_components.py  test_cli_runner.py  test_completions.py  test_component_filtering.py  test_config.py  test_config_files.py  test_lsp.py  test_mcp.py  test_mcp_exclusion.py  test_plugins.py  test_profiles.py  test_recall_stop_hook.py  test_session_search_core.py  test_session_search_grep.py  test_session_search_readers.py  test_settings_exclusion.py  test_skills.py  test_state.py  test_symlinks.py  test_target_registry.py
(+43 files in other folders)
