[project]
name = "ai-rules"
version = "v0.2.0"
description = "Manage user-level AI agent configurations"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Will Pfleger", email = "pfleger.will@gmail.com" }
]
dependencies = [
    "click>=8.1",
    "hatch>=1.15.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "ruff>=0.14.3",
]

[project.scripts]
ai-rules = "ai_rules.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version:tf"]
tag_format = "v{version}"
branch = "main"
commit_parser = "conventional"
commit_message = "chore(release): {version}"

[tool.semantic_release.commit_parser_opts]
allowed_types = ["feat", "fix", "chore", "ci", "docs", "style", "refactor", "test"]

[tool.semantic_release.commit_type_map]
chore = "patch"
ci = "patch"
docs = "patch"
style = "patch"
refactor = "patch"
test = "patch"

[[tool.uv.index]]
name = "default"
url = "https://pypi.org/simple"
